--- a/src/styles/base/globals.scss
+++ b/src/styles/base/globals.scss
@@ -27,8 +27,6 @@ section {
 
 .bg-shell {
   min-height: 100%;
-  max-width: 100%;
-  overflow-x: clip;
   position: relative;
   isolation: isolate;
 
