--- a/src/styles/tokens/_typography.scss
+++ b/src/styles/tokens/_typography.scss
@@ -7,7 +7,7 @@ $fs-1:       clamp(1.05rem,  0.98rem + 0.32vw, 1.20rem);
 $fs-2:       clamp(1.30rem,  1.12rem + 0.80vw, 1.85rem);
 $fs-3:       clamp(2.00rem,  1.40rem + 2.20vw, 3.10rem);
 $fs-4:       clamp(2.70rem,  1.70rem + 3.80vw, 4.60rem);
-$fs-display: clamp(3.80rem,  2.20rem + 5.80vw, 7.00rem);
+$fs-display: clamp(2.40rem,  2.20rem + 5.80vw, 7.00rem);
 
 $lh-tight:   0.98;
 $lh-heading: 1.08;
